[tool.poetry]
name = "src"
version = "0.1.0"
description = "Learn the modern data stack"
authors = ["Caspar Heidbrink <37964284+DecisioNaut@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.5.0"
dbt-bigquery = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
